# auth-fastapi

./: .env.testing  .gitignore  README-DOC.md  README.md  entrypoint.py  pyproject.toml  test.db
scripts/: seed_users.py
src/application/use_cases/: auth_uc.py
src/domain/entities/: user_entities.py
src/domain/ports/: ISettingRepository.py  IUserRepository.py
src/infrastructure/adapters/db/: database.py
src/infrastructure/adapters/db/models/: user.py
src/infrastructure/adapters/db/repositories/: sql_alchemy_user_repository.py
src/infrastructure/adapters/fastapi/: api.py  dependecies.py  deprecate_auth.py  swagger_info.py
src/infrastructure/adapters/fastapi/routes/: auth_routes.py  user_routes.py
src/infrastructure/adapters/fastapi/schemas/: user_schemas.py
src/infrastructure/config/: setting_repository.py  settings.py
